# zcc

./: CMakeLists.txt  Cargo.toml
src/: CMakeLists.txt  comp_error.rs  keywords.hpp  lang.rs  lexer.rs  main.cpp  main.rs
tests/: big_test.c  test.c
